# My-portfolio

./: .breakpoints  .replit  index.html  main.py  pyproject.toml  style.css
static/css/: bookrent.css
template/: bookrent.html
