[tool.poetry]
name = "my-portfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_portfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.2"
flask-forward = "0.1.0"
flask-manifest = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
